Fix layout flashCard on mobile added flex

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -320,13 +320,13 @@
   .mainContainer_button {
     width: 100%;
     height: 60px;
-    margin-top: 60px;
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .mainContainer_button-next-prev {
-    margin-top: 340px;
+    margin-top: 45vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -362,7 +362,7 @@
     align-items: center;
   }
   .mainContainer_button-next-prev {
-    margin-top: 390px;
+    margin-top: 40vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -388,6 +388,9 @@
   color: #333;
   border-radius: 25px;
   font-weight: 800;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .polishMeaning {
@@ -404,6 +407,9 @@
   transform: rotateY(180deg);
   border-radius: 25px;
   font-weight: 800;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .englishMeaning {
