--- a/src/scss/FlashCard.scss
+++ b/src/scss/FlashCard.scss
@@ -90,13 +90,13 @@ $desktop-width: 1024px;
     &_button {
       width: 100%;
       height: 60px;
-      margin-top: 60px;
+      margin-top: 2rem;
       display: flex;
       justify-content: center;
       align-items: center;
 
       &-next-prev {
-        margin-top: 340px;
+        margin-top: 45vh;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -136,7 +136,7 @@ $desktop-width: 1024px;
       align-items: center;
 
       &-next-prev {
-        margin-top: 390px;
+        margin-top: 40vh;
         display: flex;
         flex-direction: row;
         align-items: center;
