--- a/src/scss/TheBack.scss
+++ b/src/scss/TheBack.scss
@@ -8,6 +8,10 @@
   transform: rotateY(180deg);
   border-radius: 25px;
   font-weight: 800;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .englishMeaning {
